--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -25,6 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from azure_utils.machine_learning.utils import load_configuration\n",
     "from azure_utils.utilities import text_to_json, get_auth\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
     "from azureml.core.model import Model\n",
@@ -52,15 +53,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "image_name = get_key(env_path, 'image_name')"
+    "cfg = load_configuration(\"../workspace_conf.yml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    },
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "image_name = cfg['image_name']"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Get workspace\n",
     "Load existing workspace from the config file."
@@ -69,19 +94,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "ws = Workspace.from_config(auth=get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "## Load model"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -89,10 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = 'question_match_model'\n",
-    "model_version = int(get_key(env_path, 'model_version'))\n",
-    "model = Model(ws, name=model_name, version=model_version)\n",
-    "print(model.name, model.version)"
+    "## Load model"
    ]
   },
   {
@@ -338,9 +372,9 @@
    }
   ],
   "kernelspec": {
-   "display_name": "Python [conda env:MLAKSDeployAML]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-MLAKSDeployAML-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
