--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -127,27 +127,26 @@
    "source": [
     "%%writefile score.py\n",
     "\n",
+    "import pandas as pd\n",
     "import json\n",
     "from duplicate_model import DuplicateModel\n",
-    "import logging as lg\n",
+    "import logging\n",
     "import timeit as t\n",
     "\n",
-    "\n",
-    "\n",
     "def init():\n",
-    "    logger = lg.getLogger(\"scoring_script\")\n",
+    "    logger = logging.getLogger(\"scoring_script\")\n",
     "    global model\n",
     "    model_path = \"model.pkl\"\n",
     "    questions_path = \"./data_folder/questions.tsv\"\n",
     "    start = t.default_timer()\n",
     "    model = DuplicateModel(model_path, questions_path)\n",
     "    end = t.default_timer()\n",
-    "    load_time_msg = \"Model loading time: {0} ms\".format(round((end-start)*1000, 2))\n",
-    "    logger.info(load_time_msg)\n",
+    "    loadTimeMsg = \"Model loading time: {0} ms\".format(round((end-start)*1000, 2))\n",
+    "    logger.info(loadTimeMsg)\n",
     "\n",
     "\n",
     "def run(body):\n",
-    "    logger = lg.getLogger(\"scoring_script\")\n",
+    "    logger = logging.getLogger(\"scoring_script\")\n",
     "    json_load_text = json.loads(body)\n",
     "    text_to_score = json_load_text[\"input\"]\n",
     "    start = t.default_timer()\n",
