--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -34,12 +34,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
+    "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n",
+    "from azure_utils.machine_learning.utils import load_configuration\n",
+    "from azure_utils.utilities import text_to_json, get_auth\n",
     "from azureml.core.compute import AksCompute, ComputeTarget\n",
     "from azureml.core.webservice import Webservice, AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
-    "from dotenv import set_key, get_key, find_dotenv\n",
-    "from azure_utils.utilities import text_to_json, get_auth\n",
-    "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n"
+    "from dotenv import set_key, get_key, find_dotenv\n"
    ]
   },
   {
@@ -65,38 +66,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_name = get_key(env_path, 'image_name')"
+    "cfg = load_configuration(\"../workspace_conf.yml\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "image_name = cfg['image_name']\n",
+    "aks_service_name = cfg['aks_service_name']\n",
+    "aks_name = cfg['aks_name']\n",
+    "aks_location = cfg['workspace_region']\n",
+    "storageConnString = cfg['storageConnString']\n"
+   ],
    "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "aks_service_name = \"YOUR_AKS_SERVICE_NAME\"\n",
-    "aks_name = \"YOUR_AKS_NAME\"\n",
-    "aks_location = \"YOUR_AKS_LOCATION\""
-   ]
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "set_key(env_path, \"aks_service_name\", aks_service_name)\n",
-    "set_key(env_path, \"aks_name\", aks_name)\n",
-    "set_key(env_path, \"aks_location\", aks_location)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Get workspace\n",
     "Load existing workspace from the config file."
@@ -113,39 +108,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "image = ws.images[image_name]"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Restore the statistics data."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "storageConnString = get_key(env_path, \"storage_conn_string\")\n",
-    "statisticsCollector.hydrateFromStorage(storageConnString)"
+    "Restore the statistics data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Provision the AKS Cluster\n",
-    "This is a one time setup. You can reuse this cluster for multiple deployments after it has been created. If you delete \n",
-    "the cluster or the resource group that contains it, then you would have to recreate it. Let's first check if there are \n",
-    "enough cores in the subscription for the cluster ."
+    "statisticsCollector.hydrateFromStorage(storageConnString)"
    ]
   },
   {
@@ -156,6 +138,18 @@
      "parameters"
     ]
    },
+   "outputs": [],
+   "source": [
+    "## Provision the AKS Cluster\n",
+    "This is a one time setup. You can reuse this cluster for multiple deployments after it has been created. If you delete \n",
+    "the cluster or the resource group that contains it, then you would have to recreate it. Let's first check if there are \n",
+    "enough cores in the subscription for the cluster ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "vm_family = \"Dv2\"\n",
@@ -234,10 +228,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%time\n",
     "aks_target.wait_for_completion(show_output = True)\n",
@@ -246,8 +238,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Let's check that the cluster is created successfully."
    ]
@@ -262,10 +256,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "assert aks_status == 'Succeeded', 'AKS failed to create'"
    ]
@@ -278,13 +270,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we deploy the web service. We deploy two pods with 1 CPU core each."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -292,6 +277,15 @@
      "parameters"
     ]
    },
+   "outputs": [],
+   "source": [
+    "Next, we deploy the web service. We deploy two pods with 1 CPU core each."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_replicas = 2\n",
@@ -324,10 +318,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%time\n",
     "aks_service.wait_for_deployment(show_output=True)\n",
@@ -335,27 +327,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can check the logs of the web service with the below."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aks_service.get_logs()"
+    "You can check the logs of the web service with the below."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test the web service\n",
-    "We now test the web sevice."
+    "aks_service.get_logs()"
    ]
   },
   {
@@ -366,6 +350,16 @@
      "parameters"
     ]
    },
+   "outputs": [],
+   "source": [
+    "## Test the web service\n",
+    "We now test the web service."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_dupes_to_score = 4"
@@ -389,7 +383,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jsontext = text_to_json(text_to_score)"
+    "json_text = text_to_json(text_to_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%time\n",
+    "prediction = aks_service.run(input_data = json_text)\n",
+    "print(prediction)"
    ]
   },
   {
@@ -397,33 +400,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%%time\n",
-    "prediction = aks_service.run(input_data = jsontext)\n",
-    "print(prediction)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Let's try a few more duplicate questions and display their top 3 original matches. Let's first get the scoring URL \n",
     "and API key for the web service."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "scoring_url = aks_service.scoring_uri\n",
     "api_key = aks_service.get_keys()[0]"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Write the URI and key to the statistics tracker."
    ]
@@ -445,19 +439,10 @@
    "outputs": [],
    "source": [
     "headers = {'content-type': 'application/json', 'Authorization':('Bearer '+ api_key)}\n",
-    "r = requests.post(scoring_url, data=jsontext, headers=headers) # Run the request twice since the first time takes a \n",
+    "r = requests.post(scoring_url, data=json_text, headers=headers) # Run the request twice since the first time takes a \n",
     "%time r = requests.post(scoring_url, data=jsontext, headers=headers) # little longer due to the loading of the model\n",
     "print(r)\n",
     "r.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dupes_to_score = dupes_test.iloc[:5, num_dupes_to_score]"
    ]
   },
   {
