--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -25,29 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
     "from azure_utils.machine_learning.utils import load_configuration\n",
-    "from azure_utils.utilities import text_to_json, get_auth\n",
+    "from azure_utils.utilities import text_to_json\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from azureml.core.model import Model\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from dotenv import set_key, get_key, find_dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env_path = find_dotenv(raise_error_if_not_found=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
-    "values in the following cell with your information."
+    "from azureml.core.model import Model"
    ]
   },
   {
@@ -60,7 +42,8 @@
    },
    "outputs": [],
    "source": [
-    "cfg = load_configuration(\"../workspace_conf.yml\")"
+    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
+    "values in the following cell with your information."
    ]
   },
   {
@@ -96,7 +79,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
+    "ws = get_workspace_from_config()\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ],
    "metadata": {
@@ -126,7 +109,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Load model"
+    "model_name = 'question_match_model'\n",
+    "\n",
+    "model = Model(ws, name=model_name)\n",
+    "print(model.name, model.version)"
    ]
   },
   {
@@ -288,8 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_version = str(image.version)\n",
-    "set_key(env_path, \"image_version\", image_version)"
+    "image_version = str(image.version)"
    ]
   },
   {
