--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -36,11 +36,10 @@
     "import requests\n",
     "from MetricsUtils.hpStatisticsCollection import statisticsCollector, CollectionEntry\n",
     "from azure_utils.machine_learning.utils import load_configuration\n",
-    "from azure_utils.utilities import text_to_json, get_auth\n",
+    "from azure_utils.utilities import text_to_json\n",
     "from azureml.core.compute import AksCompute, ComputeTarget\n",
     "from azureml.core.webservice import Webservice, AksWebservice\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from dotenv import set_key, get_key, find_dotenv\n"
+    "from azure_utils.machine_learning.utils import get_workspace_from_config\n"
    ]
   },
   {
@@ -48,13 +47,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "env_path = find_dotenv(raise_error_if_not_found=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
     "values in the following cell with your information."
@@ -63,22 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "cfg = load_configuration(\"../workspace_conf.yml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "image_name = cfg['image_name']\n",
-    "aks_service_name = cfg['aks_service_name']\n",
-    "aks_name = cfg['aks_name']\n",
-    "aks_location = cfg['workspace_region']\n",
-    "storageConnString = cfg['storageConnString']\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -93,41 +72,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "image_name = cfg['image_name']\n",
+    "aks_service_name = cfg['aks_service_name']\n",
+    "aks_name = cfg['aks_name']\n",
+    "aks_location = cfg['workspace_region']\n",
+    "storageConnString = cfg['storageConnString']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Get workspace\n",
     "Load existing workspace from the config file."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
+    "ws = get_workspace_from_config()\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "image = ws.images[image_name]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Restore the statistics data."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "statisticsCollector.hydrateFromStorage(storageConnString)"
+    "Restore the statistics data."
    ]
   },
   {
@@ -138,6 +121,15 @@
      "parameters"
     ]
    },
+   "outputs": [],
+   "source": [
+    "statisticsCollector.hydrateFromStorage(storageConnString)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Provision the AKS Cluster\n",
@@ -189,23 +181,11 @@
    "source": [
     "results = subprocess.run([\n",
     "    \"az\", \"vm\", \"list-usage\", \n",
-    "    \"--location\", get_key(env_path, \"aks_location\"), \n",
+    "    \"--location\", aks_location, \n",
     "    \"--query\", \"[?contains(localName, '%s')].{max:limit, current:currentValue}\" % (vm_family)\n",
     "], stdout=subprocess.PIPE)\n",
     "quota = json.loads(''.join(results.stdout.decode('utf-8')))\n",
     "diff = int(quota[0]['max']) - int(quota[0]['current'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if diff <= requested_cores:\n",
-    "    print(\"Not enough cores in region, asking for {} but have {}\".format(requested_cores, diff))\n",
-    "    raise Exception(\"Core Limit\", \"Note enough cores to satisfy request\")\n",
-    "print(\"There are enough cores, you may continue...\")"
    ]
   },
   {
