--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -30,22 +30,11 @@
    "source": [
     "import os\n",
     "\n",
-    "from azure_utils.utilities import get_auth\n",
+    "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
     "from azureml.core import Experiment\n",
     "from azureml.core import ScriptRunConfig\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from azureml.core.runconfig import RunConfiguration\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from dotenv import set_key, get_key, find_dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env_path = find_dotenv(raise_error_if_not_found=True)"
+    "from azureml.core.runconfig import RunConfiguration"
    ]
   },
   {
@@ -53,15 +42,6 @@
    "metadata": {},
    "source": [
     "## Initialize Model Hyperparameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook uses a training script that uses \n",
-    "[lightgbm](https://lightgbm.readthedocs.io/en/latest/Python-API.html#scikit-learn-api). \n",
-    "Here we set the number of estimators. "
    ]
   },
   {
@@ -74,13 +54,23 @@
    },
    "outputs": [],
    "source": [
-    "num_estimators = \"10\"\n",
-    "set_key(env_path, \"num_estimators\", num_estimators)"
+    "This notebook uses a training script that uses \n",
+    "[lightgbm](https://lightgbm.readthedocs.io/en/latest/Python-API.html#scikit-learn-api). \n",
+    "Here we set the number of estimators. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "num_estimators = \"10\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## Initialize Workspace\n",
     "\n",
@@ -88,18 +78,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
+    "ws = get_workspace_from_config()\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Create An Experiment\n",
     "**Experiment** is a logical container in an Azure ML Workspace. It hosts run records which can include run metrics \n",
@@ -107,18 +97,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "experiment_name = \"mlaks-train-on-local\"\n",
     "exp = Experiment(workspace=ws, name=experiment_name)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## View `create_model.py`\n",
     "\n",
@@ -126,18 +116,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "with open(\"./scripts/create_model.py\", \"r\") as f:\n",
     "    print(f.read())"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Note `create_model.py` also references a `item_selector.py` and `label_rank.py` file. Let's check those scripts \n",
     "as well."
@@ -154,10 +144,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "with open('./scripts/label_rank.py', 'r') as f:\n",
     "    print(f.read())"
@@ -179,8 +167,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "### User-managed environment\n",
@@ -190,10 +180,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Editing a run configuration property on-fly.\n",
     "run_config_user_managed = RunConfiguration()\n",
@@ -202,13 +190,15 @@
     "\n",
     "# Choose the specific Python environment of this tutorial by pointing to the Python path\n",
     "run_config_user_managed.environment.python.interpreter_path = (\n",
-    "    \"/anaconda/envs/MLAKSDeployAML/bin/python\"\n",
+    "    \"/anaconda/envs/az-ml-realtime-score/bin/python\"\n",
     ")"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "#### Submit script to run in the user-managed environment\n",
     "Note that the whole `scripts` folder is submitted for execution, including the `item_selector.py` and `label_rank.py` \n",
@@ -229,17 +219,15 @@
     "    \"--outputs\",\n",
     "    \"outputs\",\n",
     "    \"--estimators\",\n",
-    "    get_key(env_path, 'num_estimators'),\n",
+    "    num_estimators,\n",
     "    \"--match\",\n",
     "    \"5\",\n",
     "]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
     "    source_directory=\"./scripts\",\n",
@@ -251,89 +239,80 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "#### Get run history details"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#run"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Block to wait till run finishes."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#run.wait_for_completion(show_output=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "Let's check that the model is now available in your workspace."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#run.get_file_names()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "Let's retrieve the accuracy of the model from run logs by querying the run metrics."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#run.get_metrics()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
     }
    },
    "source": [
-    "### System-managed environment\n",
-    "You can also ask the system to build a new conda environment and execute your scripts in it. The environment is built \n",
-    "once and will be reused in subsequent executions as long as the conda dependencies remain unchanged. "
+    "#run.get_metrics()"
    ]
   },
   {
@@ -344,9 +323,9 @@
     }
    },
    "source": [
-    "run_config_system_managed = RunConfiguration()\n",
-    "run_config_system_managed.environment.python.user_managed_dependencies = False\n",
-    "run_config_system_managed.auto_prepare_environment = True"
+    "### System-managed environment\n",
+    "You can also ask the system to build a new conda environment and execute your scripts in it. The environment is built \n",
+    "once and will be reused in subsequent executions as long as the conda dependencies remain unchanged. "
    ],
    "execution_count": null,
    "outputs": []
@@ -359,7 +338,9 @@
     }
    },
    "source": [
-    "Let's specify the conda and pip dependencies."
+    "run_config_system_managed = RunConfiguration()\n",
+    "run_config_system_managed.environment.python.user_managed_dependencies = False\n",
+    "run_config_system_managed.auto_prepare_environment = True"
    ]
   },
   {
@@ -368,9 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify conda dependencies with scikit-learn and pandas\n",
-    "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
-    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\"]"
+    "Let's specify the conda and pip dependencies."
    ]
   },
   {
@@ -381,8 +360,9 @@
     }
    },
    "source": [
-    "cd = CondaDependencies.create(conda_packages=conda_pack, pip_packages=requirements)\n",
-    "run_config_system_managed.environment.python.conda_dependencies = cd"
+    "# Specify conda dependencies with scikit-learn and pandas\n",
+    "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
+    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\"]"
    ],
    "execution_count": null,
    "outputs": []
@@ -392,6 +372,18 @@
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "cd = CondaDependencies.create(conda_packages=conda_pack, pip_packages=requirements)\n",
+    "run_config_system_managed.environment.python.conda_dependencies = cd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "source": [
@@ -399,13 +391,15 @@
     "A new conda environment is built based on the conda dependencies object. If you are running this for the first time,  \n",
     "this might take up to 5 minutes. But this conda environment is reused so long as you don't change the conda \n",
     "dependencies."
-   ]
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    },
    "source": [
@@ -417,43 +411,30 @@
     ")\n",
     "run = exp.submit(src)\n",
     "run"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
    "metadata": {
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    },
    "source": [
     "Block and wait till run finishes."
-   ]
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    },
    "source": [
     "run.wait_for_completion(show_output = True)"
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "run.get_file_names()"
    ]
   },
   {
@@ -464,7 +445,7 @@
     }
    },
    "source": [
-    "run.get_metrics()"
+    "run.get_file_names()"
    ],
    "execution_count": null,
    "outputs": []
@@ -474,6 +455,17 @@
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "run.get_metrics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "source": [
@@ -483,13 +475,15 @@
     "\n",
     "You can also ask the system to pull down a Docker image and execute your scripts in it. We will use the \n",
     "`continuumio/miniconda3` image for that purpose."
-   ]
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    },
    "source": [
@@ -502,20 +496,6 @@
     "# Specify conda and pip dependencies\n",
     "cd = CondaDependencies.create(conda_packages=conda_pack, pip_packages=requirements)\n",
     "run_config_docker.environment.python.conda_dependencies = cd"
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "Here, we map the local `data_folder` that includes the training and testing data to the docker container using `-v` \n",
-    "flag."
    ]
   },
   {
@@ -524,9 +504,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "host_dir = os.path.abspath(\"./data_folder\")\n",
-    "container_dir = \"/data_folder\"\n",
-    "docker_arg = \"{}:{}\".format(host_dir, container_dir)"
+    "Here, we map the local `data_folder` that includes the training and testing data to the docker container using `-v` \n",
+    "flag."
    ]
   },
   {
@@ -536,6 +515,17 @@
      "name": "#%% md\n"
     }
    },
+   "source": [
+    "host_dir = os.path.abspath(\"./data_folder\")\n",
+    "container_dir = \"/data_folder\"\n",
+    "docker_arg = \"{}:{}\".format(host_dir, container_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "This time the run will use the mapped `data_folder` inside the docker container to find the data files."
    ]
@@ -552,7 +542,7 @@
     "    \"--outputs\",\n",
     "    \"outputs\",\n",
     "    \"--estimators\",\n",
-    "    get_key(env_path, 'num_estimators'),\n",
+    "    num_estimators,\n",
     "    \"--match\",\n",
     "    \"5\",\n",
     "]"
@@ -571,7 +561,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
@@ -580,7 +569,13 @@
     "    arguments=args,\n",
     "    run_config=run_config_docker,\n",
     ")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -599,16 +594,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "run.wait_for_completion(show_output=True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -620,10 +610,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "run.get_metrics()"
    ]
@@ -636,8 +624,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "We now register the model with the workspace so that we can later deploy the model."
    ]
@@ -661,23 +651,6 @@
    "outputs": [],
    "source": [
     "print(model.name, model.version, model.url, sep=\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_version = str(model.version)\n",
-    "set_key(env_path, \"model_version\", model_version)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we [develop the scoring script](03_DevelopScoringScript.ipynb) for this model."
    ]
   }
  ],
