--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -33,10 +33,9 @@
     "import sys\n",
     "import pandas as pd\n",
     "\n",
-    "from azure_utils.utilities import text_to_json, get_auth\n",
-    "from azureml.core.model import Model\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from dotenv import get_key, find_dotenv"
+    "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
+    "from azure_utils.utilities import text_to_json\n",
+    "from azureml.core.model import Model"
    ]
   },
   {
@@ -54,14 +53,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_path = find_dotenv(raise_error_if_not_found=True)"
+    "Let's load the workspace."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's load the workspace."
+    "ws = get_workspace_from_config()\n",
+    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
   {
@@ -69,14 +69,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
-    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Let's retrieve the model registered earlier and download it."
    ]
@@ -88,16 +80,14 @@
    "outputs": [],
    "source": [
     "model_name = 'question_match_model'\n",
-    "model_version = int(get_key(env_path, 'model_version'))\n",
-    "model = Model(ws, name=model_name, version=model_version)\n",
+    "\n",
+    "model = Model(ws, name=model_name)\n",
     "print(model.name, model.version, model.url, sep=\"\\n\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "model.download(target_dir=\".\", exist_ok=True)"
    ]
@@ -110,8 +100,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "We use the writefile magic to write the contents of the below cell to `score.py` which includes the  `init` and `run` \n",
     "functions required by AML.\n",
@@ -120,10 +112,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile score.py\n",
     "\n",
@@ -153,80 +143,7 @@
     "    resp = model.score(text_to_score)\n",
     "    end = t.default_timer()\n",
     "    logger.info(\"Prediction took {0} ms\".format(round((end-start)*1000, 2)))\n",
-    "    return json.dumps(resp)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's test by running the score.py which will bring the imports and functions into the context of the notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "source": [
-    "%run score.py"
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dupes_test_path = './data_folder/dupes_test.tsv'\n",
-    "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
-    "text_to_score = dupes_test.iloc[0, 4]\n",
-    "print(text_to_score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, call the init() to initialize the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "init()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We convert the question text to json format and make predictions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "json_text = text_to_json(text_to_score)\n",
-    "r = run(json_text)\n",
-    "r"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we move on to [creating the docker image which we will deploy](04_CreateImage.ipynb)."
+    "    return json.dumps(resp)\n"
    ]
   }
  ],
