--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -38,7 +38,10 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": false,
+        "tags": [
+          "parameters"
+        ]
       },
       "cell_type": "code",
       "source": "image_name = cfg['image_name']\naks_service_name = cfg['aks_service_name']\naks_name = cfg['aks_name']\naks_location = cfg['workspace_region']",
