--- a/notebooks/00_AMLConfiguration.ipynb
+++ b/notebooks/00_AMLConfiguration.ipynb
@@ -168,9 +168,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "az-ml-realtime-score",
    "language": "python",
-   "name": "python3"
+   "name": "az-ml-realtime-score"
   },
   "language_info": {
    "codemirror_mode": {
