--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -484,8 +484,8 @@
       }
     ],
     "kernelspec": {
-      "name": "python36",
-      "display_name": "Python 3.6",
+      "name": "az-ml-realtime-score",
+      "display_name": "az-ml-realtime-score",
       "language": "python"
     },
     "language_info": {
