--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -82,8 +82,8 @@
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python36",
-      "display_name": "Python 3.6",
+      "name": "az-ml-realtime-score",
+      "display_name": "az-ml-realtime-score",
       "language": "python"
     },
     "language_info": {
