--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -223,8 +223,8 @@
       }
     ],
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3",
+      "name": "az-ml-realtime-score",
+      "display_name": "az-ml-realtime-score",
       "language": "python"
     },
     "language_info": {
