--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -511,8 +511,8 @@
     ],
     "celltoolbar": "Tags",
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3",
+      "name": "az-ml-realtime-score",
+      "display_name": "az-ml-realtime-score",
       "language": "python"
     },
     "language_info": {
