--- a/notebooks/06_SpeedTestWebApp.ipynb
+++ b/notebooks/06_SpeedTestWebApp.ipynb
@@ -438,9 +438,9 @@
    "formats": "ipynb"
   },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "az-ml-realtime-score",
    "language": "python",
-   "name": "python3"
+   "name": "az-ml-realtime-score"
   },
   "language_info": {
    "codemirror_mode": {
