--- a/notebooks/07_RealTimeScoring.ipynb
+++ b/notebooks/07_RealTimeScoring.ipynb
@@ -717,9 +717,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python [conda env:MLAKSDeployAML]",
+   "display_name": "az-ml-realtime-score",
    "language": "python",
-   "name": "conda-env-MLAKSDeployAML-py"
+   "name": "az-ml-realtime-score"
   },
   "language_info": {
    "codemirror_mode": {
