--- a/notebooks/01_DataPrep.ipynb
+++ b/notebooks/01_DataPrep.ipynb
@@ -701,7 +701,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:az-ml-realtime-score]",
+   "display_name": "az-ml-realtime-score",
    "language": "python",
    "name": "az-ml-realtime-score"
   },
