--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -12,10 +12,10 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "import os\n\nfrom azure_utils.machine_learning.utils import get_workspace_from_config\nfrom azureml.core import Experiment\nfrom azureml.core import ScriptRunConfig\nfrom azureml.core.conda_dependencies import CondaDependencies\nfrom azureml.core.runconfig import RunConfiguration",
+      "source": "import os\n\nfrom azure_utils.machine_learning.utils import get_workspace_from_config\nfrom azureml.core import Experiment\nfrom azureml.core import ScriptRunConfig\nfrom azureml.core.conda_dependencies import CondaDependencies\nfrom azureml.core.runconfig import RunConfiguration\nfrom notebooks import DIRECTORY",
       "execution_count": null,
       "outputs": []
     },
@@ -101,7 +101,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "scrpt = \"create_model.py\"\nargs = [\n    \"--inputs\",\n    os.path.abspath(\"./data_folder\"),\n    \"--outputs\",\n    \"outputs\",\n    \"--estimators\",\n    num_estimators,\n    \"--match\",\n    \"5\",\n]",
@@ -113,7 +113,7 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "src = ScriptRunConfig(\n    source_directory=\"./scripts\",\n    script=scrpt,\n    arguments=args,\n    run_config=run_config_user_managed,\n)\n#run = exp.submit(src)",
+      "source": "src = ScriptRunConfig(\n    source_directory=DIRECTORY + \"/scripts\",\n    script=scrpt,\n    arguments=args,\n    run_config=run_config_user_managed,\n)\n#run = exp.submit(src)",
       "execution_count": null,
       "outputs": []
     },
@@ -135,11 +135,6 @@
       "metadata": {},
       "cell_type": "markdown",
       "source": "Block to wait till run finishes."
-    },
-    {
-      "metadata": {},
-      "cell_type": "markdown",
-      "source": ""
     },
     {
       "metadata": {
@@ -218,7 +213,7 @@
         "pycharm": {
           "name": "#%%\n"
         },
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "# Specify conda dependencies with scikit-learn and pandas\nconda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\nrequirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\"]",
@@ -254,7 +249,7 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "src = ScriptRunConfig(\n    source_directory=\"./scripts\",\n    script=scrpt,\n    arguments=args,\n    run_config=run_config_system_managed,\n)\nrun = exp.submit(src)\nrun",
+      "source": "src = ScriptRunConfig(\n    source_directory= DIRECTORY + \"/scripts\",\n    script=scrpt,\n    arguments=args,\n    run_config=run_config_system_managed,\n)\nrun = exp.submit(src)\nrun",
       "execution_count": null,
       "outputs": []
     },
@@ -284,7 +279,7 @@
         "pycharm": {
           "name": "#%%\n"
         },
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "run.get_file_names()",
@@ -348,7 +343,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "args = [\n    \"--inputs\",\n    \"/data_folder\",\n    \"--outputs\",\n    \"outputs\",\n    \"--estimators\",\n    num_estimators,\n    \"--match\",\n    \"5\",\n]",
@@ -357,7 +352,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "run_config_docker.environment.docker.arguments.append(\"-v\")\nrun_config_docker.environment.docker.arguments.append(docker_arg)",
@@ -369,10 +364,10 @@
         "pycharm": {
           "name": "#%%\n"
         },
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "src = ScriptRunConfig(\n    source_directory=\"./scripts\",\n    script=scrpt,\n    arguments=args,\n    run_config=run_config_docker,\n)",
+      "source": "src = ScriptRunConfig(\n    source_directory=DIRECTORY + \"/scripts\",\n    script=scrpt,\n    arguments=args,\n    run_config=run_config_docker,\n)",
       "execution_count": null,
       "outputs": []
     },
@@ -381,7 +376,7 @@
         "pycharm": {
           "name": "#%%\n"
         },
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "run = exp.submit(src)",
@@ -390,7 +385,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "run.wait_for_completion(show_output=True)",
@@ -423,7 +418,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "# supply a model name, and the full path to the serialized model file.\nmodel = run.register_model(\n    model_name=\"question_match_model\", model_path=\"./outputs/model.pkl\"\n)",
@@ -432,7 +427,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "print(model.name, model.version, model.url, sep=\"\\n\")",
