--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -104,24 +104,6 @@
         "trusted": false
       },
       "cell_type": "code",
-      "source": "requested_cores = node_count * vm_dict[vm_family][\"cores\"]",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "trusted": false
-      },
-      "cell_type": "code",
-      "source": "results = subprocess.run([\n    \"az\", \"vm\", \"list-usage\", \n    \"--location\", aks_location, \n    \"--query\", \"[?contains(localName, '%s')].{max:limit, current:currentValue}\" % (vm_family)\n], stdout=subprocess.PIPE)\nquota = json.loads(''.join(results.stdout.decode('utf-8')))\ndiff = int(quota[0]['max']) - int(quota[0]['current'])",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "trusted": false
-      },
-      "cell_type": "code",
       "source": "prov_config = AksCompute.provisioning_configuration(\n    agent_count=node_count, vm_size=vm_size, location=aks_location\n)\n\n# Create the cluster\naks_target = ComputeTarget.create(\n    workspace=ws, name=aks_name, provisioning_configuration=prov_config\n)",
       "execution_count": null,
       "outputs": []
@@ -511,8 +493,8 @@
     ],
     "celltoolbar": "Tags",
     "kernelspec": {
-      "name": "az-ml-realtime-score",
-      "display_name": "az-ml-realtime-score",
+      "name": "python36",
+      "display_name": "Python 3.6",
       "language": "python"
     },
     "language_info": {
