--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -10,7 +10,7 @@
         "trusted": false
       },
       "cell_type": "code",
-      "source": "from azure_utils.machine_learning.utils import load_configuration, get_workspace_from_config\nfrom azure_utils.utilities import text_to_json\nfrom azureml.core.conda_dependencies import CondaDependencies\nfrom azureml.core.model import Model\n\nimport pandas as pd",
+      "source": "from azure_utils.machine_learning.utils import load_configuration, get_workspace_from_config\nfrom azure_utils.utilities import text_to_json\nfrom azureml.core.conda_dependencies import CondaDependencies\nfrom azureml.core.model import Model\nfrom notebooks import DIRECTORY\n\nimport pandas as pd",
       "execution_count": null,
       "outputs": []
     },
@@ -96,7 +96,7 @@
         "trusted": false
       },
       "cell_type": "code",
-      "source": "%%writefile score.py\n\nimport sys\nimport pandas as pd\nimport json\nfrom duplicate_model import DuplicateModel\nimport logging\nimport timeit as t\nfrom azureml.core.model import Model\nfrom azureml.contrib.services.aml_request import rawhttp\n\nsys.path.append('./scripts/')\n\n\ndef init():\n    logger = logging.getLogger(\"scoring_script\")\n    global model\n    model_name = 'question_match_model'\n    model_path = Model.get_model_path(model_name)\n    questions_path = './data_folder/questions.tsv'\n    start = t.default_timer()\n    model = DuplicateModel(model_path, questions_path)\n    end = t.default_timer()\n    loadTimeMsg = \"Model loading time: {0} ms\".format(round((end-start)*1000, 2))\n    logger.info(loadTimeMsg)\n\n@rawhttp\ndef run(request):\n    \"\"\"\n    Function runs on each request\n    \"\"\"\n    body = request.data\n    if request.method == 'POST':\n        logger = logging.getLogger(\"scoring_script\")\n        json_load_text = json.loads(body)\n        text_to_score = json_load_text['input']\n        start = t.default_timer()\n        resp = model.score(text_to_score) \n        end = t.default_timer()\n        logger.info(\"Prediction took {0} ms\".format(round((end-start)*1000, 2)))\n        return(json.dumps(resp))\n    if request.method == 'GET':\n        resp_body = {\n            \"azEnvironment\": \"Azure\",\n            \"location\": \"westus2\",\n            \"osType\": \"Ubuntu 16.04\",\n            \"resourceGroupName\": \"\",\n            \"resourceId\": \"\",\n            \"sku\": \"\",\n            \"subscriptionId\": \"\",\n            \"uniqueId\": \"PythonMLRST\",\n            \"vmSize\": \"\",\n            \"zone\": \"\",\n            \"isServer\": False,\n            \"version\": \"\"\n        }\n        return(resp_body)\n    return AMLResponse(\"bad request\", 500)",
+      "source": "%%writefile score.py\n\nimport sys\nimport pandas as pd\nimport json\nfrom duplicate_model import DuplicateModel\nimport logging\nimport timeit as t\nfrom azureml.core.model import Model\nfrom azureml.contrib.services.aml_request import rawhttp\n\nsys.path.append(DIRECTORY + '/scripts/')\n\n\ndef init():\n    logger = logging.getLogger(\"scoring_script\")\n    global model\n    model_name = 'question_match_model'\n    model_path = Model.get_model_path(model_name)\n    questions_path = './data_folder/questions.tsv'\n    start = t.default_timer()\n    model = DuplicateModel(model_path, questions_path)\n    end = t.default_timer()\n    loadTimeMsg = \"Model loading time: {0} ms\".format(round((end-start)*1000, 2))\n    logger.info(loadTimeMsg)\n\n@rawhttp\ndef run(request):\n    \"\"\"\n    Function runs on each request\n    \"\"\"\n    body = request.data\n    if request.method == 'POST':\n        logger = logging.getLogger(\"scoring_script\")\n        json_load_text = json.loads(body)\n        text_to_score = json_load_text['input']\n        start = t.default_timer()\n        resp = model.score(text_to_score) \n        end = t.default_timer()\n        logger.info(\"Prediction took {0} ms\".format(round((end-start)*1000, 2)))\n        return(json.dumps(resp))\n    if request.method == 'GET':\n        resp_body = {\n            \"azEnvironment\": \"Azure\",\n            \"location\": \"westus2\",\n            \"osType\": \"Ubuntu 16.04\",\n            \"resourceGroupName\": \"\",\n            \"resourceId\": \"\",\n            \"sku\": \"\",\n            \"subscriptionId\": \"\",\n            \"uniqueId\": \"PythonMLRST\",\n            \"vmSize\": \"\",\n            \"zone\": \"\",\n            \"isServer\": False,\n            \"version\": \"\"\n        }\n        return(resp_body)\n    return AMLResponse(\"bad request\", 500)",
       "execution_count": null,
       "outputs": []
     },
@@ -128,7 +128,7 @@
         "trusted": false
       },
       "cell_type": "code",
-      "source": "from azureml.core.image import ContainerImage\n\nimage_config = ContainerImage.image_configuration(\n    execution_script=\"score.py\",\n    runtime=\"python\",\n    conda_file=\"lgbmenv.yml\",\n    description=\"Image with lightgbm model\",\n    tags={\"area\": \"text\", \"type\": \"lightgbm\"},\n    dependencies=[\n        \"./data_folder/questions.tsv\",\n        \"./duplicate_model.py\",\n        \"./scripts/item_selector.py\",\n    ],\n)\n\nimage = ContainerImage.create(\n    name=image_name,\n    # this is the model object\n    models=[model],\n    image_config=image_config,\n    workspace=ws,\n)",
+      "source": "from azureml.core.image import ContainerImage\n\nimage_config = ContainerImage.image_configuration(\n    execution_script=\"score.py\",\n    runtime=\"python\",\n    conda_file=\"lgbmenv.yml\",\n    description=\"Image with lightgbm model\",\n    tags={\"area\": \"text\", \"type\": \"lightgbm\"},\n    dependencies=[\n        \"./data_folder/questions.tsv\",\n        DIRECTORY + \"/duplicate_model.py\",\n        DIRECTORY + \"/scripts/item_selector.py\",\n    ],\n)\n\nimage = ContainerImage.create(\n    name=image_name,\n    # this is the model object\n    models=[model],\n    image_config=image_config,\n    workspace=ws,\n)",
       "execution_count": null,
       "outputs": []
     },
@@ -223,8 +223,8 @@
       }
     ],
     "kernelspec": {
-      "name": "az-ml-realtime-score",
-      "display_name": "az-ml-realtime-score",
+      "name": "python36",
+      "display_name": "Python 3.6",
       "language": "python"
     },
     "language_info": {
@@ -232,7 +232,7 @@
       "nbconvert_exporter": "python",
       "name": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.5.4",
+      "version": "3.6.2",
       "file_extension": ".py",
       "codemirror_mode": {
         "version": 3,
